# inference-optimization

./: .gitignore  .pre-commit-config.yaml  README.md  REPORT.md  benchmark.py  benchmark_results.json  convert_to_onnx.py  pyproject.toml  run_benchmarks.py  service_base.py  service_onnx.py  service_onnx_batched.py
src/: batch_queue.py  config.py  embeddings.py  schemas.py
tests/: test_unit.py
