[project]
name = "inference-optimization"
version = "0.1.0"
description = "Inference optimization for BERT model"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "aiohttp==3.13.5",
    "fastapi[standard]==0.135.3",
    "numpy==2.4.4",
    "onnxruntime==1.19.0",
    "onnxscript==0.6.2",
    "torch==2.11.0",
    "transformers==5.5.3",
]

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.10",
    "ty==0.0.29",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
